--- a/test-output/old/Default suite/methods.html
+++ b/test-output/old/Default suite/methods.html
@@ -1,6 +1,14 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c4b1">  <td>21/06/09 12:42:51</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="Proba.test()[pri:0, instance:test.Proba@79b06cab]">test</td> 
-  <td>main@1818544933</td>   <td></td> </tr>
+<tr bgcolor="6297d2">  <td>21/06/13 19:54:13</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeAllTests()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&gt;&gt;beforeAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/13 19:54:36</td>   <td>23457</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WishlistTests.afterAllMethods()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/13 19:54:23</td>   <td>10962</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTests.addOneProductToWishlist()[pri:5, instance:automationTests.WishlistTests@6a28ffa4]">addOneProductToWishlist</td> 
+  <td>main@156856360</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/13 19:54:17</td>   <td>4876</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WishlistTests.beforeAllMethods()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
+<tr bgcolor="6297d2">  <td>21/06/13 19:54:41</td>   <td>28151</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.posleSvihTestova()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&lt;&lt;posleSvihTestova</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
 </table>
