--- a/test-output/old/Default suite/methods-alphabetical.html
+++ b/test-output/old/Default suite/methods-alphabetical.html
@@ -1,14 +1,44 @@
 <h2>Methods run, sorted chronologically</h2><h3>&gt;&gt; means before, &lt;&lt; means after</h3><p/><br/><em>Default suite</em><p/><small><i>(Hover the method name to see the test class name)</i></small><p/>
 <table border="1">
 <tr><th>Time</th><th>Delta (ms)</th><th>Suite<br>configuration</th><th>Test<br>configuration</th><th>Class<br>configuration</th><th>Groups<br>configuration</th><th>Method<br>configuration</th><th>Test<br>method</th><th>Thread</th><th>Instances</th></tr>
-<tr bgcolor="90c4b1">  <td>21/06/13 19:54:23</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="WishlistTests.addOneProductToWishlist()[pri:5, instance:automationTests.WishlistTests@6a28ffa4]">addOneProductToWishlist</td> 
-  <td>main@156856360</td>   <td></td> </tr>
-<tr bgcolor="90c4b1">  <td>21/06/13 19:54:36</td>   <td>12495</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;WishlistTests.afterAllMethods()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&lt;&lt;afterAllMethods</td> 
-<td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
-<tr bgcolor="90c4b1">  <td>21/06/13 19:54:17</td>   <td>-6086</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;WishlistTests.beforeAllMethods()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&gt;&gt;beforeAllMethods</td> 
-<td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
-<tr bgcolor="6297d2">  <td>21/06/13 19:54:13</td>   <td>-10962</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeAllTests()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&gt;&gt;beforeAllTests</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
-<tr bgcolor="6297d2">  <td>21/06/13 19:54:41</td>   <td>17189</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.posleSvihTestova()[pri:0, instance:automationTests.WishlistTests@6a28ffa4]">&lt;&lt;posleSvihTestova</td> 
-<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@156856360</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.afterAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.afterAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.afterAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.afterAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.afterAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>0</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;LoginTests.afterAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;afterAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.beforeAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.beforeAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.beforeAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.beforeAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.beforeAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-10</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;LoginTests.beforeAllMethods()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllMethods</td> 
+<td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="6297d2">  <td>21/06/15 17:51:58</td>   <td>-86432</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&gt;&gt;BaseTest.beforeAllTests()[pri:0, instance:automationTests.LoginTests@c267ef4]">&gt;&gt;beforeAllTests</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-24</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithEmptyCredentials()[pri:25, instance:automationTests.LoginTests@c267ef4]">loginWithEmptyCredentials</td> 
+  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:52:46</td>   <td>-38684</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithInvalidCredentials()[pri:10, instance:automationTests.LoginTests@c267ef4]">loginWithInvalidCredentials</td> 
+  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-58</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithInvalidEmail()[pri:15, instance:automationTests.LoginTests@c267ef4]">loginWithInvalidEmail</td> 
+  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-37</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithInvalidPassword()[pri:20, instance:automationTests.LoginTests@c267ef4]">loginWithInvalidPassword</td> 
+  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:52:13</td>   <td>-72030</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.loginWithValidCredentials()[pri:5, instance:automationTests.LoginTests@c267ef4]">loginWithValidCredentials</td> 
+  <td>main@1536031937</td>   <td></td> </tr>
+<tr bgcolor="6297d2">  <td>21/06/15 17:53:25</td>   <td>2</td> <td>&nbsp;</td><td>&nbsp;</td><td title="&lt;&lt;BaseTest.posleSvihTestova()[pri:0, instance:automationTests.LoginTests@c267ef4]">&lt;&lt;posleSvihTestova</td> 
+<td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td>  <td></td>   <td></td> </tr>
+<tr bgcolor="90c4b1">  <td>21/06/15 17:53:25</td>   <td>-8</td> <td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td>&nbsp;</td><td title="LoginTests.userCanLogout()[pri:30, instance:automationTests.LoginTests@c267ef4]">userCanLogout</td> 
+  <td>main@1536031937</td>   <td></td> </tr>
 </table>
