--- a/test-output/emailable-report.html
+++ b/test-output/emailable-report.html
@@ -9,12 +9,15 @@
 <table>
 <tr><th>Test</th><th># Passed</th><th># Skipped</th><th># Retried</th><th># Failed</th><th>Time (ms)</th><th>Included Groups</th><th>Excluded Groups</th></tr>
 <tr><th colspan="8">Default suite</th></tr>
-<tr><td><a href="#t0">Default test</a></td><td class="num">3</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">125,808</td><td></td><td></td></tr>
+<tr><td><a href="#t0">Default test</a></td><td class="num">6</td><td class="num">0</td><td class="num">0</td><td class="num">0</td><td class="num">72,081</td><td></td><td></td></tr>
 </table>
-<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="3">automationTests.WishlistTests</td><td><a href="#m0">addOneProductToWishlist</a></td><td rowspan="1">1623775575412</td><td rowspan="1">13682</td></tr><tr class="passedeven"><td><a href="#m1">addTwoProductsToWishlist</a></td><td rowspan="1">1623775627341</td><td rowspan="1">38466</td></tr><tr class="passedeven"><td><a href="#m2">removeWishlist</a></td><td rowspan="1">1623775602326</td><td rowspan="1">1933</td></tr></tbody>
+<table id='summary'><thead><tr><th>Class</th><th>Method</th><th>Start</th><th>Time (ms)</th></tr></thead><tbody><tr><th colspan="4">Default suite</th></tr></tbody><tbody id="t0"><tr><th colspan="4">Default test &#8212; passed</th></tr><tr class="passedeven"><td rowspan="6">automationTests.LoginTests</td><td><a href="#m0">loginWithEmptyCredentials</a></td><td rowspan="1">1624014061254</td><td rowspan="1">8735</td></tr><tr class="passedeven"><td><a href="#m1">loginWithInvalidCredentials</a></td><td rowspan="1">1624014037123</td><td rowspan="1">3045</td></tr><tr class="passedeven"><td><a href="#m2">loginWithInvalidEmail</a></td><td rowspan="1">1624014043500</td><td rowspan="1">5560</td></tr><tr class="passedeven"><td><a href="#m3">loginWithInvalidPassword</a></td><td rowspan="1">1624014052006</td><td rowspan="1">3966</td></tr><tr class="passedeven"><td><a href="#m4">loginWithValidCredentials</a></td><td rowspan="1">1624014029231</td><td rowspan="1">4436</td></tr><tr class="passedeven"><td><a href="#m5">userCanLogout</a></td><td rowspan="1">1624014074920</td><td rowspan="1">10628</td></tr></tbody>
 </table>
-<h2>Default test</h2><h3 id="m0">automationTests.WishlistTests#addOneProductToWishlist</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m1">automationTests.WishlistTests#addTwoProductsToWishlist</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
-<h3 id="m2">automationTests.WishlistTests#removeWishlist</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h2>Default test</h2><h3 id="m0">automationTests.LoginTests#loginWithEmptyCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m1">automationTests.LoginTests#loginWithInvalidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m2">automationTests.LoginTests#loginWithInvalidEmail</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m3">automationTests.LoginTests#loginWithInvalidPassword</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m4">automationTests.LoginTests#loginWithValidCredentials</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
+<h3 id="m5">automationTests.LoginTests#userCanLogout</h3><table class="result"><tr><th class="invisible"/></tr></table><p class="totop"><a href="#summary">back to summary</a></p>
 </body>
 </html>
